# smithpy

./: .gitignore  CHANGELOG  CONTRIBUTING.md  README.md  SECURITY.md  downloader.sh  modrinth_api.json  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  python-package.yml  release.yml
configs/: modrinth_api.json  policy.json
docs/: README.md  _config.yml  index.md  schemas.md
docs/schemas/: modrinth_api.schema.json  policy.schema.json
schemas/: modrinth_api.schema.yml  policy.schema.yml
scripts/: gen_version.py
src/: __main__.py  other.py  test.py
src/ModForge-CLI/: __main__.py
src/api/: __init__.py  client.py  modrith_api.py
src/core/: core.py  policy.py
src/modforge-cli/: __version__.py  cli.py
src/modforge-cli/core/: __init__.py  downloader.py  resolver.py
src/modforge_cli/: __init__.py  __main__.py  __version__.py  cli.py
src/modforge_cli/api/: __init__.py  modrinth.py
src/modforge_cli/cli/: __init__.py  export.py  modpack.py  project.py  shared.py  sklauncher.py  utils.py
src/modforge_cli/core/: __init__.py  downloader.py  models.py  policy.py  resolver.py  utils.py
src/resources/: icon.txt
src/smithpy/: cli.py
src/smithpy/api/: modrinth.py
src/smithpy/core/: __init__.py  models.py  policy.py  resolver.py
src/styles/: banner.py  console.py
testpack/: smithpy.json
