[project]
name = "smithpy"
version = "0.1.0"
description = ""
authors = [
    {name = "Frank1o3",email = "jahdy1o3@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "packaging (>=25.0,<26.0)",
    "semver (>=3.0.4,<4.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyzipper (>=0.3.6,<0.4.0)",
    "rich (>=14.2.0,<15.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "types-jsonschema (>=4.25.1.20251009,<5.0.0.0)",
    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)",
    "ruff (>=0.14.8,<0.15.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "types-colorama (>=0.4.15.20250801,<0.5.0.0)"
]

[tool.poetry]
package-mode = false